--- a/TelinkBleMeshLib/build.gradle
+++ b/TelinkBleMeshLib/build.gradle
@@ -14,18 +14,18 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 3
-        versionName "3.3.2"
+        minSdkVersion 24
+        targetSdkVersion 34
+        versionCode 1
+        versionName "1.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
