--- a/TelinkBleMeshLib/build.gradle
+++ b/TelinkBleMeshLib/build.gradle
@@ -19,11 +19,11 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 34
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0.0"
 
@@ -36,14 +36,13 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
-
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    implementation "com.madgag.spongycastle:core:1.58.0.0"
-    implementation "com.madgag.spongycastle:prov:1.58.0.0"
+    api "com.madgag.spongycastle:core:1.58.0.0"
+    api "com.madgag.spongycastle:prov:1.58.0.0"
 
     implementation "androidx.appcompat:appcompat:1.1.0"
     testImplementation "junit:junit:4.12"
